[package]
name = "webscraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wasm-bindgen = "0.2"
rocket = {version = "0.5.0", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
rocket_cors = "0.6.0"

[dev-dependencies]
cfg-if = "0.1"

[package.metadata.wasm-bindgen]
target = "web"
