[package]
name = "webscraper"
version = "0.1.0"
edition = "2021"

[[test]]
name = "tree_test"
path = "tests/tree_test.rs"

[[bin]]
name = "webscraper"
path = "src/main.rs"

[dependencies]
wasm-bindgen = "0.2"
axum = { version = "0.6.19" } 
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.4.2", features = ["cors"]}
serde_json = "1.0"
reqwest = "0.11"
scraper = "0.12"
rand = "0.8"
trust-dns-resolver = "0.21.1"

[dev-dependencies]
cfg-if = "0.1"

[package.metadata.wasm-bindgen]
target = "web"
